--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -44,7 +44,7 @@ title: Our Workshops
     </p>
   </div>
   <div class="small-4 columns">
-    <h4>Want Us to Teach Where You Are?</h4>
+    <h4>Want to Host a Workshop?</h4>
     <p>
       Please <a href="{{site.baseurl}}/workshops/request/">fill in this form</a>.
     </p>
