--- a/pages/reading.html
+++ b/pages/reading.html
@@ -7,6 +7,15 @@ title: Reading Material
   <img src="{{site.filesurl}}/workshops/2013-01-mckellar.png" alt="Jessica McKellar 2013" />
 </div>
 
+<h2>Books</h2>
+
+<div class="row">
+  <div class="small-6 columns">{% include projects/practical-computing-for-biologists.html %}</div>
+  <div class="small-6 columns">{% include projects/eff-phys.html  %}</div>
+</div>
+
+<h2>Papers</h2>
+
 <ul>
 
   <li>
