Adding title quote

--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -3,9 +3,20 @@ layout: page-fullwidth
 permalink: /scf/history/
 title: The History of Software Carpentry
 ---
-<p>
-  <img src="{{site.filesurl}}/workshops/scilifelab-2014-05-slice.jpg" alt="Stockholm 2014" />
-</p>
+<div class="row">
+  <div class="small-6 columns">
+    <img src="{{site.filesurl}}/feynman-blackboard.jpg" alt="Feynman's Final Blackboard" />
+  </div>
+  <div class="small-6 columns">
+    <h4>
+      <em>
+	What I cannot create, I do not understand.
+	<br/>
+	&ndash; Richard Feynman
+      </em>
+    </h4>
+  </div>
+</div>
 <h2>In the Beginning...</h2>
 <p>
   In 1995-96,
