--- a/pages/scf_join.html
+++ b/pages/scf_join.html
@@ -4,6 +4,9 @@ permalink: /scf/join/
 title: Become a Partner
 ---
 <p>
+  <img src="{{site.filesurl}}/workshops/scilifelab-2014-05-slice.jpg" alt="Stockholm 2014" />
+</p>
+<p>
   The Software Carpentry Foundation currently offers several tiers of organizational membership:
 </p>
 <ol>
