--- a/pages/scf.html
+++ b/pages/scf.html
@@ -55,7 +55,7 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
   please see <a href="{{site.github_url}}/board">this GitHub repository</a>.
 </p>
 
-<h2>Staff</h2>
+<h2 id="staff">Staff</h2>
 
 <div class="row">
   <div class="small-4 columns">
@@ -72,7 +72,7 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
   </div>
 </div>
 
-<h2>Steering Committee (2015)</h2>
+<h2 id="committee-2015">Steering Committee (2015)</h2>
 
 <div class="row">
   <div class="small-4 columns">
