--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -120,16 +120,12 @@ title: The History of Software Carpentry
 <p>
   Wilson left Mozilla in July 2014 to help found the Software Carpentry Foundation,
   an independent non-profit volunteer sponsored by <a href="http://numfocus.org">NumFOCUS</a>.
-  Together with its sibling organization,
-  <a href="http://datacarpentry.org">Data Carpentry</a>,
-  its mission is to help researchers get more done with computers in less time and with less pain.
-</p>
-<p>
-  Software Carpentry's governing body is is <a href="{{site.baseurl}}/scf/">Steering Committee</a>,
-  which was elected from and by its <a href="{{site.baseurl}}/scf/members/">members</a>.
-  The SCF is funded by a wide variety of <a href="{{site.baseurl}}/scf/partners/">partner organizations</a>,
-  by workshop administration fees,
-  and by <a href="{{site.baseurl}}/join/donate/">direct donations</a>.
-  If you would like to know more or get involved,
-  please <a href="mailto:{{site.contact}}">get in touch</a>.
+  Software Carpentry's governing body is a <a href="{{site.baseurl}}/scf/">Steering Committee</a>,
+  which is elected from and by its <a href="{{site.baseurl}}/scf/members/">members</a>
+  and assisted by an Advisory Board made up of representatives from partner organizations.
+  The Foundation's <a href="{{site.baseurl}}/scf/#committee-2015">first Steering Committee</a>
+  was elected in January 2015,
+  and in October 2015
+  <a href="{{site.baseurl}}/team/#duckles.jonah">Jonah Duckles</a> began work
+  as the Foundation's new Executive Director.
 </p>
