--- a/pages/join_donate.html
+++ b/pages/join_donate.html
@@ -3,4 +3,19 @@ layout: page-fullwidth
 permalink: /join/donate/
 title: Donate
 ---
-{% include paypal %}
+<p>
+  The Software Carpentry Foundation's mission is to help researchers get more done with computers in less time and with less pain.
+  The SCF is funded by a wide variety of <a href="{{site.baseurl}}/scf/partners/">partner organizations</a>,
+  by workshop administration fees,
+  and by <a href="{{site.baseurl}}/join/donate/">direct donations</a>
+  from people like you.
+</p>
+<div align="center">
+  {% include paypal %}
+</div>
+<p>
+  You can also buy everything from maternity shirts to messenger bags
+  in our <a href="http://www.cafepress.com/swcarpentry">online store</a>,
+  or purchase <a href="http://www.stickermule.com/user/1070632011/stickers">laptop stickers</a>
+  to show your support.
+</p>
