--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -58,7 +58,7 @@ title: Our Workshops
   <table class="table table-striped workshops">
     {% for w in site.data.amy.workshops_current reversed %}
     <tr>
-      <td><img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country}}.png" title="{{w.country | replace: '-', ' '}}" alt="{{w.country | replace: '-', ' '}}" /></td>
+      <td><img src="{{site.filesurl}}/flags/{{site.flag_size}}/{{w.country | downcase}}.png" title="{{w.country | replace: '-', ' ' | downcase}}" alt="{{w.country | replace: '-', ' ' | downcase}}" /></td>
       <td class="link"><a href="{{w.url}}">{{w.venue}}</a></td>
       <td class="date">{{w.humandate}}</td>
     </tr>
