--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@ permalink: /index.html
     <a href="{{site.baseurl}}/workshops/"><img src="{{site.filesurl}}/workshops/2012-12-uta.png" alt="University of Texas 2012" /></a>
     <a href="{{site.baseurl}}/workshops/"><h4>Our Workshops ›</h4></a>
     <p>
-      Host a workshop or find one to attend.
+      Find or host a workshop.
     </p>
   </div>
   <div class="small-4 columns">
@@ -21,7 +21,7 @@ permalink: /index.html
     <a href="{{site.baseurl}}/join/"><img src="{{site.filesurl}}/workshops/scripps-2012-11.png" alt="Scripps 2012" /></a>
     <a href="{{site.baseurl}}/join/"><h4>Get Involved ›</h4></a>
     <p>
-      Have a look at what we teach.
+      Help us help researchers.
     </p>
   </div>
 </div>
