Removing link to slideshow

--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -24,8 +24,7 @@ title: Workshop Operations
 <div align="center">
   <p>
     For instructions on setting up a website for a workshop,
-    please see the <a href="{{site.github_url}}/workshop-template">workshop template home page</a>
-    or <a href="{{site.github_url}}/slideshows/creating-website/">this slideshow</a>.
+    please see the <a href="{{site.github_url}}/workshop-template">workshop template home page</a>.
   </p>
 </div>
 
