Fixing misplaced full stop

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -181,7 +181,7 @@ title: Frequently Asked Questions
       <li>runs our standardised pre- and post-workshop assessment forms and provides us with the results
       (please contact us by email at <a href="mailto:{{site.contact}}">{{site.contact}}</a>
       to obtain copies of the assessment forms), and</li>
-      <li>sends us summary information about attendees (at a minimum, the number of people who attended)</li>.
+      <li>sends us summary information about attendees (at a minimum, the number of people who attended).</li>
       </ul>
   </dd>
 
