Fixing ID in FAQ item

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -338,7 +338,7 @@ title: Frequently Asked Questions
       please see our <a href="{{site.baseurl}}/scf/supporters.html">list of supporters</a> for details.
     </p>
   </dd>
-  <dt id="#citation">How should I cite Software Carpentry?</dt>
+  <dt id="citation">How should I cite Software Carpentry?</dt>
   <dd>
     <p>
       Please see our <a href="{{site.baseurl}}/CITATION">CITATION</a> file for references.
