--- a/pages/scf.html
+++ b/pages/scf.html
@@ -112,7 +112,19 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
 </p>
 
 <div class="row">
-  <div class="small-4 columns">
+  <div class="small-2 columns">
+    <h3>2014</h3>
+    <ul>
+      <li><a href="{{page.minutes}}/minutes-2014-12-16.md">2014-12-16</a></li>
+      <li><a href="{{page.minutes}}/minutes-2014-12-02.md">2014-12-02</a></li>
+      <li><a href="{{page.minutes}}/minutes-2014-11-18.md">2014-11-18</a></li>
+      <li><a href="{{page.minutes}}/minutes-2014-11-04.md">2014-11-04</a></li>
+      <li><a href="{{page.minutes}}/minutes-2014-10-14.md">2014-10-14</a></li>
+      <li><a href="{{page.minutes}}/minutes-2014-09-30.md">2014-09-30</a></li>
+      <li><a href="{{page.minutes}}/minutes-2014-09-16.md">2014-09-16</a></li>
+    </ul>
+  </div>
+  <div class="small-2 columns">
     <h3>2015</h3>
     <ul>
       <li><a href="{{page.minutes}}/minutes-2015-10-08.md">2015-10-08</a></li>
@@ -134,16 +146,6 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
       <li><a href="{{page.minutes}}/minutes-2015-01-20.md">2015-01-20</a></li>
     </ul>
   </div>
-  <div class="small-4 columns">
-    <h3>2014</h3>
-    <ul>
-      <li><a href="{{page.minutes}}/minutes-2014-12-16.md">2014-12-16</a></li>
-      <li><a href="{{page.minutes}}/minutes-2014-12-02.md">2014-12-02</a></li>
-      <li><a href="{{page.minutes}}/minutes-2014-11-18.md">2014-11-18</a></li>
-      <li><a href="{{page.minutes}}/minutes-2014-11-04.md">2014-11-04</a></li>
-      <li><a href="{{page.minutes}}/minutes-2014-10-14.md">2014-10-14</a></li>
-      <li><a href="{{page.minutes}}/minutes-2014-09-30.md">2014-09-30</a></li>
-      <li><a href="{{page.minutes}}/minutes-2014-09-16.md">2014-09-16</a></li>
-    </ul>
+  <div class="small-8 columns">
   </div>
 </div>
