Using wrapped paragraphs for the opener

--- a/pages/scf_partners.html
+++ b/pages/scf_partners.html
@@ -5,8 +5,19 @@ title: Our Partners
 ---
 <div class="row">
   <div class="small-6 columns">
-    <img src="{{site.filesurl}}/orgs/numfocus.jpg" alt="NumFOCUS" />
-    <div>
+    <p class="imgpar">
+      <img src="{{site.filesurl}}/orgs/data-carpentry.png" alt="Data Carpentry" />
+      Our sibling organization
+      <a href="{{site.dc_url}}">Data Carpentry</a>
+      teaches basic concepts, skills, and tools for working more effectively with data.
+      They develop curricula and run workshops that are domain specific,
+      target fundamental data analysis and data management challenges,
+      and require little or no prior programming experience.
+    </p>
+  </div>
+  <div class="small-6 columns">
+    <p class="imgpar">
+      <img src="{{site.filesurl}}/orgs/numfocus.jpg" alt="NumFOCUS" />
       We are very grateful to our fiscal sponsor, <a href="http://numfocus.org">NumFOCUS</a>.
       Its aim to promote the use of accessible and reproducible computing in science and technology
       through educational programs,
@@ -14,18 +25,7 @@ title: Our Partners
       reproducible scientific research,
       and open-code development,
       and an increase in collaborative research tools and documentation.
-    </div>
-  </div>
-  <div class="small-6 columns">
-    <img src="{{site.filesurl}}/orgs/data-carpentry.png" alt="Data Carpentry" />
-    <div>
-      Our sibling organization
-      <a href="{{site.dc_url}}">Data Carpentry</a>
-      teaches basic concepts, skills, and tools for working more effectively with data.
-      They develop curricula and run workshops that are domain specific,
-      target fundamental data analysis and data management challenges,
-      and require little or no prior programming experience.
-    </div>
+    </p>
   </div>
 </div>
 
