Linking to Lessons Learned paper

--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -129,3 +129,8 @@ title: The History of Software Carpentry
   <a href="{{site.baseurl}}/team/#duckles.jonah">Jonah Duckles</a> began work
   as the Foundation's new Executive Director.
 </p>
+<p>
+  To learn more about our history and the lessons we've learned along the way,
+  please see the paper
+  "<a href="http://f1000research.com/articles/3-62/v1">Software Carpentry: Lessons Learned</a>".
+</p>
