Adding some images to the workshp page

--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -32,19 +32,22 @@ title: Our Workshops
 
 <div class="row">
   <div class="small-4 columns">
-    <h4>Want to Know More?</h4>
+    <a href="{{site.baseurl}}/workshops/"><img src="{{site.filesurl}}/workshops/2012-12-uta.png" alt="University of Texas 2012" /></a>
+    <a href="{{site.baseurl}}/faq/"><h4>Want to Know More?</h4></a>
     <p>
       See our <a href="{{site.baseurl}}/faq/">FAQ</a>.
     </p>
   </div>
   <div class="small-4 columns">
-    <h4>Want to Run a Workshop?</h4>
+    <a href="{{site.baseurl}}/lessons/"><img src="{{site.filesurl}}/workshops/dc-2014.jpg" alt="Data Carpentry 2014" /></a>
+    <a href="{{site.baseurl}}/workshops/operations/"><h4>Want to Run a Workshop?</h4></a>
     <p>
       See our <a href="{{site.baseurl}}/workshops/operations/">operations guide</a>.
     </p>
   </div>
   <div class="small-4 columns">
-    <h4>Want to Host a Workshop?</h4>
+    <a href="{{site.baseurl}}/join/"><img src="{{site.filesurl}}/workshops/scripps-2012-11.png" alt="Scripps 2012" /></a>
+    <a href="{{site.baseurl}}/workshops/request/"><h4>Want to Host a Workshop?</h4></a>
     <p>
       Please <a href="{{site.baseurl}}/workshops/request/">fill in this form</a>.
     </p>
