Tidying up layout of workshop operations page

--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -10,22 +10,29 @@ title: Workshop Operations
   The description explains how workshops work,
   and the checklists below explain how each role
   contributes to a successful workshop.
+  For instructions on setting up a website for a workshop,
+  please see the <a href="{{site.github_url}}/workshop-template">workshop template home page</a>.
 </p>
 
-<ul>
-  <li><a href="{{site.baseurl}}/checklists/host/">Host</a></li>
-  <li><a href="{{site.baseurl}}/checklists/admin/">Admin</a></li>
-  <li><a href="{{site.baseurl}}/checklists/lead/">Lead Instructor</a></li>
-  <li><a href="{{site.baseurl}}/checklists/instructor/">Instructors</a></li>
-  <li><a href="{{site.baseurl}}/checklists/helper/">Helpers</a></li>
-  <li><a href="{{site.baseurl}}/checklists/accessibility/">Accessibility</a></li>
-</ul>
-
-<div align="center">
-  <p>
-    For instructions on setting up a website for a workshop,
-    please see the <a href="{{site.github_url}}/workshop-template">workshop template home page</a>.
-  </p>
+<div class="row">
+  <div class="small-2 columns" align="center">
+    <a href="{{site.baseurl}}/checklists/host/">Host</a>
+  </div>
+  <div class="small-2 columns" align="center">
+    <a href="{{site.baseurl}}/checklists/admin/">Admin</a>
+  </div>
+  <div class="small-2 columns" align="center">
+    <a href="{{site.baseurl}}/checklists/lead/">Lead Instructor</a>
+  </div>
+  <div class="small-2 columns" align="center">
+    <a href="{{site.baseurl}}/checklists/instructor/">Instructor</a>
+  </div>
+  <div class="small-2 columns" align="center">
+    <a href="{{site.baseurl}}/checklists/helper/">Helper</a>
+  </div>
+  <div class="small-2 columns" align="center">
+    <a href="{{site.baseurl}}/checklists/accessibility/">Accessibility</a>
+  </div>
 </div>
 
 <h2 id="story">The Story of a Workshop</h2>
