--- a/pages/license.html
+++ b/pages/license.html
@@ -3,34 +3,87 @@ layout: page-fullwidth
 permalink: /license/
 title: License
 ---
-<h2 id="cc-by">Instructional Material</h2>
+<h3 id="cc-by">Instructional Material</h3>
 
-<img src="{{site.filesurl}}/creative-commons-attribution-license.png" />
+<div class="row">
+  <div class="small-2 columns">
+    <img src="{{site.filesurl}}/creative-commons-attribution-license.png" />
+  </div>
+  <div class="small-10 columns">
+    <p>
+      All Software Carpentry instructional material is made available under the
+      <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution license</a>.
+      The following is a human-readable summary of (and not a substitute for)
+      the <a href="https://creativecommons.org/licenses/by/4.0/legalcode">full legal text of the CC BY 4.0 license</a>.
+    </p>
+  </div>
+</div>
 
-<p>All Software Carpentry instructional material is made available under the <a href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution license</a>. The following is a human-readable summary of (and not a substitute for) the <a href="https://creativecommons.org/licenses/by/4.0/legalcode">full legal text of the CC BY 4.0 license</a>.</p>
-<p>You are free:
+<p>
+  You are free:
+</p>
 <ul>
-<li>to <strong>Share</strong>&mdash;copy and redistribute the material in any medium or format</li>
-<li>to <strong>Adapt</strong>&mdash;remix, transform, and build upon the material</li>
+  <li>
+    to <strong>Share</strong>&mdash;copy and redistribute the material
+    in any medium or format
+  </li>
+  <li>
+    to <strong>Adapt</strong>&mdash;remix, transform, and build upon the
+    material
+  </li>
 </ul>
-for any purpose, even commercially.</p>
-<p>The licensor cannot revoke these freedoms as long as you follow the license terms.</p>
-<p>Under the following terms:</p>
+<p>
+  for any purpose, even commercially.
+  The licensor cannot revoke these freedoms as long as you follow these license terms:
+</p>
 <ul>
-<li><strong>Attribution</strong>&mdash;You must give appropriate credit (mentioning that your work is derived from work that is Copyright (c) Software Carpentry and, where practical, linking to http://software-carpentry.org/), provide a <a href="https://creativecommons.org/licenses/by/4.0/">link to the license</a>, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.</li>
+  <li>
+    <strong>Attribution</strong>&mdash;You must give appropriate credit
+    (mentioning that your work is derived from work that is Copyright
+    (c) Software Carpentry and, where practical, linking to
+    http://software-carpentry.org/), provide
+    a <a href="https://creativecommons.org/licenses/by/4.0/">link to the
+      license</a>, and indicate if changes were made. You may do so in any
+    reasonable manner, but not in any way that suggests the licensor
+    endorses you or your use.
+  </li>
 </ul>
-<p><strong>No additional restrictions</strong>&mdash;You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits. With the understanding that:</p>
-<p>Notices:</p>
+<p>
+  <strong>No additional restrictions</strong>&mdash;You may not apply
+  legal terms or technological measures that legally restrict others
+  from doing anything the license permits. With the understanding
+  that:
+</p>
 <ul>
-<li>You do not have to comply with the license for elements of the material in the public domain or where your use is permitted by an applicable exception or limitation.</li>
-<li>No warranties are given. The license may not give you all of the permissions necessary for your intended use. For example, other rights such as publicity, privacy, or moral rights may limit how you use the material.</li>
+  <li>
+    You do not have to comply with the license for elements of the
+    material in the public domain or where your use is permitted by an
+    applicable exception or limitation.
+  </li>
+  <li>
+    No warranties are given. The license may not give you all of the
+    permissions necessary for your intended use. For example, other
+    rights such as publicity, privacy, or moral rights may limit how
+    you use the material.
+  </li>
 </ul>
 
-<h2 id="mit">Software</h2>
+<h3 id="mit">Software</h3>
 
-<img src="{{site.filesurl}}/osi-approved-license.png" />
+<div class="row">
+  <div class="small-2 columns">
+    <img src="{{site.filesurl}}/osi-approved-license.png" />
+  </div>
+  <div class="small-10 columns">
+    <p>
+      Except where otherwise noted, the example programs and other
+      software provided by Software Carpentry are made available under
+      the <a href="http://opensource.org">OSI</a>-approved <a href="http://opensource.org/licenses/mit-license.html">MIT
+      license</a>.
+    </p>
+  </div>
+</div>
 
-<p>Except where otherwise noted, the example programs and other software provided by Software Carpentry are made available under the <a href="http://opensource.org">OSI</a>-approved <a href="http://opensource.org/licenses/mit-license.html">MIT license</a>.</p>
 <p>
   Permission is hereby granted, free of charge, to any person
   obtaining a copy of this software and associated documentation
