Fixing title of 'Previous Lessons' page

--- a/pages/lessons_previous.html
+++ b/pages/lessons_previous.html
@@ -1,7 +1,7 @@
 ---
 layout: page-fullwidth
 permalink: /lessons/previous/
-title: Our Lessons
+title: Previous Material
 ---
 <h2 id="v4">Version 4</h2>
 <p>
