--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -2,6 +2,8 @@
 layout: page-fullwidth
 permalink: /workshops/
 title: Our Workshops
+map_url: workshops_past.json
+map_element: map_canvas
 ---
 <p>
   A Software Carpentry workshop is hands-on two-day event
@@ -54,7 +56,7 @@ title: Our Workshops
   </div>
 </div>
 
-<script src="https://embed.github.com/view/geojson/gvwilson/feeling-responsive/gh-pages/workshops.geojson"></script>
+<div id="map_canvas" style="width: 98%; height: 500px; margin-left:auto; margin-right: auto; margin-bottom: 15px"></div>
 
 <div id="future">
   <h2>Future Workshops</h2>
