--- a/pages/workshops_past.html
+++ b/pages/workshops_past.html
@@ -2,8 +2,10 @@
 layout: page-fullwidth
 permalink: /workshops/past/
 title: Past Workshops
+map_url: workshops_past.json
+map_element: map_canvas
 ---
-<script src="https://embed.github.com/view/geojson/gvwilson/feeling-responsive/gh-pages/workshops_past.geojson"></script>
+<div id="map_canvas" style="width: 98%; height: 500px; margin-left:auto; margin-right: auto; margin-bottom: 15px"></div>
 
 <div style="text-align: center; margin-bottom: 15px">
   {% for flag in site.data.amy.flags.workshops %}
