Loading the correct JSON file

--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -2,7 +2,7 @@
 layout: page-fullwidth
 permalink: /workshops/
 title: Our Workshops
-map_url: workshops_past.json
+map_url: workshops.json
 map_element: map_canvas
 ---
 <p>
