Catching up with recent changes to legacy site

--- a/pages/checklists_host.html
+++ b/pages/checklists_host.html
@@ -15,6 +15,12 @@ title: Host Checklist
   recruiting local helpers,
   and finding supplies like extension cords and sticky notes.
 </p>
+<p>
+  You may find it useful to look at
+  <a href="{{site.baseurl}}/workshops/pitch/">this pitch</a>,
+  which explains to faculty, administrators, and others
+  what a workshop is and why they should host one.
+</p>
 
 <h2>Getting Started</h2>
 <p>
