--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -129,6 +129,22 @@ title: The History of Software Carpentry
   <a href="{{site.baseurl}}/team/#duckles.jonah">Jonah Duckles</a> began work
   as the Foundation's new Executive Director.
 </p>
+<div class="container">
+  <div class="row">
+    <div class="small-4 columns" align="center">
+      <img src="{{site/filesurl}}/graphs/learners.png" alt="Learners" class="responsive" width="300" />
+      <h4>Learners</h4>
+    </div>
+    <div class="small-4 columns" align="center">
+      <img src="{{site/filesurl}}/graphs/workshops.png" alt="Workshops" class="responsive" width="300" />
+      <h4>Workshops</h4>
+    </div>
+    <div class="small-4 columns" align="center">
+      <img src="{{site/filesurl}}/graphs/instructors.png" alt="Instructors" class="responsive" width="300" />
+      <h4>Instructors</h4>
+    </div>
+  </div>
+</div>
 <p>
   To learn more about our history and the lessons we've learned along the way,
   please see the paper
