--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -13,6 +13,12 @@ title: Workshop Operations
   For instructions on setting up a website for a workshop,
   please see the <a href="{{site.github_url}}/workshop-template">workshop template home page</a>.
 </p>
+<p>
+  You may also find it useful to look at
+  <a href="{{site.baseurl}}/workshops/pitch.html">this pitch</a>,
+  which explains to faculty, administrators, and others
+  what a workshop is and why they should host one.
+</p>
 
 <div class="row">
   <div class="small-2 columns" align="center">
