--- a/pages/about.html
+++ b/pages/about.html
@@ -100,17 +100,17 @@ title: About Us
   
   <div class="small-4 columns" align="center">
     <h4>Workshops</h4>
-    <img src="{{site.filesurl}}/2015/10/workshops.png" alt="Workshop Growth" />
+    <img src="{{site.filesurl}}/graphs/workshops.png" alt="Workshop Growth" />
   </div>
   
   <div class="small-4 columns" align="center">
     <h4>Learners</h4>
-    <img src="{{site.filesurl}}/2015/10/learners.png" alt="Learner Growth" />
+    <img src="{{site.filesurl}}/graphs/learners.png" alt="Learner Growth" />
   </div>
   
   <div class="small-4 columns" align="center">
     <h4>Instructors</h4>
-    <img src="{{site.filesurl}}/2015/10/instructors.png" alt="Instructor Growth" />
+    <img src="{{site.filesurl}}/graphs/instructors.png" alt="Instructor Growth" />
   </div>
   
 </div> <!-- /row -->
