Fixed https://github.com/swcarpentry/website/issues/70 Replaced all "small-n" grid styles by "medium-n" in order to have those block collapsing at medium breakpoint

--- a/pages/about.html
+++ b/pages/about.html
@@ -21,8 +21,8 @@ title: About Us
 </p>
 
 <div class="row">
-  
-  <div class="small-4 columns">
+
+  <div class="medium-4 columns">
     <h4>Supporters</h4>
     <p>
       Software Carpentry is made possible by the generous support of
@@ -32,8 +32,8 @@ title: About Us
       and individuals can <a href="{{site.baseurl}}/join/instructor/">become instructors</a>.
     </p>
   </div>
-  
-  <div class="small-4 columns">
+
+  <div class="medium-4 columns">
     <h4>Workshops</h4>
     <p>
       You can <a href="{{site.baseurl}}/workshops/attend/">host a workshop</a>
@@ -44,8 +44,8 @@ title: About Us
       and our <a href="{{site.baseurl}}/faq/">answers other questions</a>.
     </p>
   </div>
-  
-  <div class="small-4 columns">
+
+  <div class="medium-4 columns">
     <h4>Conversations</h4>
     <p>
       You can <a href="mailto:{{site.contact}}">send us email</a>,
@@ -55,12 +55,12 @@ title: About Us
       or browse <a href="{{site.data.socialmedia.GitHub}}">our repositories on GitHub</a>.
     </p>
   </div>
-  
+
 </div> <!-- /row -->
 
 <div class="row">
-  
-  <div class="small-4 columns">
+
+  <div class="medium-4 columns">
     <h4>Make Things</h4>
     <p>
       As an open source project,
@@ -70,8 +70,8 @@ title: About Us
       <a href="{{site.baseurl}}/join/projects/">build our tools</a>.
     </p>
   </div>
-  
-  <div class="small-4 columns">
+
+  <div class="medium-4 columns">
     <h4>Read Things</h4>
     <p>
       <a href="http://www.plosbiology.org/article/info%3Adoi%2F10.1371%2Fjournal.pbio.1001745">Best Practices in Scientific Computing</a>
@@ -82,8 +82,8 @@ title: About Us
       <a href="{{site.baseurl}}/reading/">these other readings</a>.
     </p>
   </div>
-  
-  <div class="small-4 columns">
+
+  <div class="medium-4 columns">
     <h4>Buy Things</h4>
     <p>
       Want to show your support?
@@ -92,25 +92,25 @@ title: About Us
       and you can <a href="http://www.stickermule.com/user/1070632011/stickers">buy our stickers</a> too.
     </p>
   </div>
-  
+
 </div> <!-- /row -->
 
 
 <div class="row">
-  
-  <div class="small-4 columns" align="center">
+
+  <div class="medium-4 columns" align="center">
     <h4>Workshops</h4>
     <img src="{{site.filesurl}}/graphs/workshops.png" alt="Workshop Growth" />
   </div>
-  
-  <div class="small-4 columns" align="center">
+
+  <div class="medium-4 columns" align="center">
     <h4>Learners</h4>
     <img src="{{site.filesurl}}/graphs/learners.png" alt="Learner Growth" />
   </div>
-  
-  <div class="small-4 columns" align="center">
+
+  <div class="medium-4 columns" align="center">
     <h4>Instructors</h4>
     <img src="{{site.filesurl}}/graphs/instructors.png" alt="Instructor Growth" />
   </div>
-  
+
 </div> <!-- /row -->
