--- a/pages/join_helpwanted.html
+++ b/pages/join_helpwanted.html
@@ -14,7 +14,7 @@ title: Help Wanted
 </p>
 
 <div class="row">
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <ul>
       <li>
         <p>
@@ -71,7 +71,7 @@ title: Help Wanted
       </li>
     </ul>
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <ul>
       <li>
         <p>
@@ -115,7 +115,7 @@ title: Help Wanted
       </li>
     </ul>
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <ul>
       <li>
         <p>
