--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -4,10 +4,10 @@ permalink: /scf/history/
 title: The History of Software Carpentry
 ---
 <div class="row">
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     <img src="{{site.filesurl}}/feynman-blackboard.jpg" alt="Feynman's Final Blackboard" />
   </div>
-  <div class="small-6 columns">
+  <div class="medium-6 columns">
     <h4>
       <em>
 	What I cannot create, I do not understand.
@@ -131,15 +131,15 @@ title: The History of Software Carpentry
 </p>
 <div class="container">
   <div class="row">
-    <div class="small-4 columns" align="center">
+    <div class="medium-4 columns" align="center">
       <img src="{{site/filesurl}}/graphs/learners.png" alt="Learners" class="responsive" width="300" />
       <h4>Learners</h4>
     </div>
-    <div class="small-4 columns" align="center">
+    <div class="medium-4 columns" align="center">
       <img src="{{site/filesurl}}/graphs/workshops.png" alt="Workshops" class="responsive" width="300" />
       <h4>Workshops</h4>
     </div>
-    <div class="small-4 columns" align="center">
+    <div class="medium-4 columns" align="center">
       <img src="{{site/filesurl}}/graphs/instructors.png" alt="Instructors" class="responsive" width="300" />
       <h4>Instructors</h4>
     </div>
