--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -33,21 +33,21 @@ map_element: map_canvas
 </p>
 
 <div class="row">
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <a href="{{site.baseurl}}/workshops/"><img src="{{site.filesurl}}/workshops/2012-12-uta.png" alt="University of Texas 2012" /></a>
     <a href="{{site.baseurl}}/faq/"><h4>Want to Know More?</h4></a>
     <p>
       See our <a href="{{site.baseurl}}/faq/">FAQ</a>.
     </p>
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <a href="{{site.baseurl}}/lessons/"><img src="{{site.filesurl}}/workshops/dc-2014.jpg" alt="Data Carpentry 2014" /></a>
     <a href="{{site.baseurl}}/workshops/operations/"><h4>Want to Run a Workshop?</h4></a>
     <p>
       See our <a href="{{site.baseurl}}/workshops/operations/">operations guide</a>.
     </p>
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <a href="{{site.baseurl}}/join/"><img src="{{site.filesurl}}/workshops/scripps-2012-11.png" alt="Scripps 2012" /></a>
     <a href="{{site.baseurl}}/workshops/request/"><h4>Want to Host a Workshop?</h4></a>
     <p>
@@ -71,7 +71,7 @@ map_element: map_canvas
   </table>
 
   <div id="calendar" align="center">
-    <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showDate=0&amp;showCalendars=0&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=h7t394o5uodii4a18vr8vh6mv0ga4cdq%40import.calendar.google.com&amp;color=%235229A3&amp;ctz=America%2FNew_York" style=" border-width:0 " width="800" height="400" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showDate=0&amp;showCalendars=0&amp;height=400&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=h7t394o5uodii4a18vr8vh6mv0ga4cdq%40import.calendar.google.com&amp;color=%235229A3&amp;ctz=America%2FNew_York" style=" border-width:0 " height="400" frameborder="0" scrolling="no"></iframe>
     <p style="text-align: right; margin-top: 5px;margin-bottom: 5px;">
       <a class="label swc-blue-bg" style="margin-right: 10px" href="http://software-carpentry.org/workshops.ics">Calendar Feed</a>
     </p>
