--- a/pages/workshops_pitch.html
+++ b/pages/workshops_pitch.html
@@ -27,15 +27,15 @@ title: "Pitching a Workshop"
   as evidenced by our growth:
 </p>
 <div class="row">
-  <div class="small-4 columns" align="center">
+  <div class="medium-4 columns" align="center">
     <img src="{{site.filesurl}}/graphs/learners.png" alt="Learners" class="responsive" width="300" />
     <h4>Learners</h4>
   </div>
-  <div class="small-4 columns" align="center">
+  <div class="medium-4 columns" align="center">
     <img src="{{site.filesurl}}/graphs/workshops.png" alt="Workshops" class="responsive" width="300" />
     <h4>Workshops</h4>
   </div>
-  <div class="small-4 columns" align="center">
+  <div class="medium-4 columns" align="center">
     <img src="{{site.filesurl}}/graphs/instructors.png" alt="Instructors" class="responsive" width="300" />
     <h4>Instructors</h4>
   </div>
