--- a/pages/index.html
+++ b/pages/index.html
@@ -3,21 +3,21 @@ layout: page-fullwidth
 permalink: /index.html
 ---
 <div class="row">
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <a href="{{site.baseurl}}/workshops/"><img src="{{site.filesurl}}/workshops/2012-12-uta.png" alt="University of Texas 2012" /></a>
     <a href="{{site.baseurl}}/workshops/"><h4>Our Workshops ›</h4></a>
     <p>
       Find or host a workshop.
     </p>
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <a href="{{site.baseurl}}/lessons/"><img src="{{site.filesurl}}/workshops/dc-2014.jpg" alt="Data Carpentry 2014" /></a>
     <a href="{{site.baseurl}}/lessons/"><h4>Our Lessons ›</h4></a>
     <p>
       Have a look at what we teach.
     </p>
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <a href="{{site.baseurl}}/join/"><img src="{{site.filesurl}}/workshops/scripps-2012-11.png" alt="Scripps 2012" /></a>
     <a href="{{site.baseurl}}/join/"><h4>Get Involved ›</h4></a>
     <p>
@@ -27,11 +27,11 @@ permalink: /index.html
 </div>
 
 <div class="row">
-  <div class="small-8 columns">
+  <div class="medium-8 columns">
     <h3>Recent Blog Posts</h3>
     {% include list-posts entries='10' %}
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <h3>Upcoming Workshops</h3>
     <table class="table table-striped workshops">
       {% for w in site.data.amy.workshops_current reversed %}
