--- a/pages/scf.html
+++ b/pages/scf.html
@@ -58,15 +58,15 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
 <h2 id="staff">Staff</h2>
 
 <div class="row">
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <h4>Executive Director</h4>
     {% include people/duckles.jonah.html %}
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <h4>Program Coordinator</h4>
     {% include people/sane.maneesha.html %}
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     <h4>Emeritus Executive Director</h4>
     {% include people/wilson.g.html %}
   </div>
@@ -75,33 +75,33 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
 <h2 id="committee-2015">Steering Committee (2015)</h2>
 
 <div class="row">
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     {% include people/huff.k.html %}
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     {% include people/davis.m.html %}
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     {% include people/lagesen.k.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     {% include people/williams.jason.html %}
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     {% include people/chuang-howe.a.html %}
   </div>
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     {% include people/pawlik.a.html %}
   </div>
 </div>
 <div class="row">
-  <div class="small-4 columns">
+  <div class="medium-4 columns">
     {% include people/silva.raniere.html %}
   </div>
-  <div class="small-4 columns"></div>
-  <div class="small-4 columns"></div>
+  <div class="medium-4 columns"></div>
+  <div class="medium-4 columns"></div>
 </div>
 
 <h2>Meeting Minutes</h2>
@@ -112,7 +112,7 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
 </p>
 
 <div class="row">
-  <div class="small-2 columns">
+  <div class="medium-2 columns">
     <h3>2014</h3>
     <ul>
       <li><a href="{{page.minutes}}/minutes-2014-12-16.md">2014-12-16</a></li>
@@ -124,7 +124,7 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
       <li><a href="{{page.minutes}}/minutes-2014-09-16.md">2014-09-16</a></li>
     </ul>
   </div>
-  <div class="small-2 columns">
+  <div class="medium-2 columns">
     <h3>2015</h3>
     <ul>
       <li><a href="{{page.minutes}}/minutes-2015-10-08.md">2015-10-08</a></li>
@@ -146,6 +146,6 @@ minutes: https://github.com/swcarpentry/board/blob/master/minutes
       <li><a href="{{page.minutes}}/minutes-2015-01-20.md">2015-01-20</a></li>
     </ul>
   </div>
-  <div class="small-8 columns">
+  <div class="medium-8 columns">
   </div>
 </div>
